apps/dynamic-stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dynamic-stages
  namespace: ds
spec:
  replicas: 3
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: dynamic-stages
  template:
    metadata:
      labels:
        app: dynamic-stages
    spec:
      containers:
      - name: dynamic-stages
        image: nginx
        ports:
        - containerPort: 80
